# imaging-problem-list-data

./: .dockerignore  .gitignore  .htmlhintrc  .npmrc  AGENTS.md  CLAUDE.md  CURRENT_PLAN.md  Caddyfile  Dockerfile  README.md  Taskfile.yml  alembic.ini  base_users.json  config.toml.example  docker-compose.yml  eslint.config.cjs  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.github/: copilot-instructions.md
alembic/: env.py
docs/: DEV_LOG.md  README.md  agent-restructuring.md  agent_restructuring.md  api-internals.md  api-server.md  api-usage.md  batch-runner-plan.md  code-review-2026-02-15.md  coding-agent-design.md  coding-agent-prompts.md  config-plan.md  configuration.md  data-model-plan.md  database-layer.md  dev-ops.md  eval-internals.md  eval-usage.md  extraction-internals.md  extraction-usage.md  extractor-agent-plan.md  extractor-agent-roadmap.md  extractor-frontend.md  extractor-ui-refactoring.md  frontend-internals.md  frontend-refactoring.md  frontend-usage.md  future-improvements.md  future_improvements.md  human-review-workflow.md  improving-ui-plan.md  ipl-frontend-guide.md  logging-internals.md  logging-plan.md  logging-usage.md  migration-architecture.md  migration-plan.md  model-selection-notes.md  naming_refactoring.md  package-restructuring-plan.md  (+12 more)
extractor-ui/: app.js  index.html
prompts/: validator_prompt_example.md
scripts/: capture_screenshots.py  generate_finding_display_info.py  generate_ipl_from_efls.py  lint_json.py  lint_toml.py  smoke_api.sh  test_coding_prompts.py
tests/: conftest.py  test_api.py  test_batch_cli.py  test_chunk_prompt.py  test_cli.py  test_code_assigner.py  test_coding_agents.py  test_coding_bridge.py  test_config.py  test_eval_cli.py  test_eval_datasets.py  test_eval_evaluators.py  test_eval_matching.py  test_exam_info_agent.py  test_extraction.py  test_extraction_orchestrator.py  test_extraction_review.py  test_integration.py  (+15 more)
(+211 files in other folders)
