[project]
name = "finding-extractor"
version = "0.1.0"
description = "Pydantic AI agent for extracting structured findings from radiology reports"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai>=1.0.0",
    "pydantic>=2.0",
    "click>=8.0",
    "asyncer>=0.0.8",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "sqlmodel>=0.0.32",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "taskiq>=0.12.0",
    "taskiq-redis>=1.2.0",
    "taskiq-fastapi>=0.4.0",
    "alembic>=1.18.3",
    "pydantic-settings>=2.0",
    "logfire[fastapi,sqlalchemy,redis]>=4.21.0",
]

[project.scripts]
finding-extractor = "finding_extractor.cli:main"
finding-extractor-api = "finding_extractor.api:main"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/finding_extractor"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "pytest-playwright>=0.6.0",
    "ruff>=0.11.0",
    "ty",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long - acceptable for report text in examples
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: end-to-end tests requiring Docker Compose stack and API keys",
]
